--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ng2-admin",
+  "name": "angular2-admin",
   "version": "0.8.0",
   "description": "Angular 2 and Bootstrap 4 Admin Template.",
   "author": "akveo",
